# GANs

./: .gitignore  download.py  main_CIFAR_10_labels.py  main_fasion_mnist_labels.py  main_ffhq.py  main_mnist.py  main_mnist_labels.py  main_obama.py  main_stanford_dogs_labels.py  pyproject.toml  wgan_main_celeba.py  wgan_main_mnist_labels.py  wgan_main_obama.py  wgan_main_stanford_dogs_labels.py
dev_testing/: Benchmark.py  Test.py
fun/: dc_image_interpolate.py  dc_image_interpolate_labels.py  dc_image_interpolate_labels_gif copy.py  dc_image_interpolate_labels_gif.py  dc_interpolate.py
src/base/: base_gan.py  base_trainer.py
src/logging/: __init__.py  logging.py
src/models/: dcgan.py  stylegan2.py  wgan.py
src/objects/: training_config.py  training_state.py
src/trainers/: dcgan_trainer.py
src/utilities/: diff_agument.py  weights.py
training_runs/celeb_a_1/: config.yaml
training_runs/cifar_1/: config.yaml
training_runs/cifar_2/: config.yaml
training_runs/cifar_3/: config.yaml
training_runs/cifar_4/: config.yaml
training_runs/fasion_mnist_1/: config.yaml
training_runs/ffhq_1/: config.yaml
training_runs/ffhq_test_3/: config.yaml
training_runs/mnist_1/: config.yaml
training_runs/mnist_2/: config.yaml
training_runs/mnist_3/: config.yaml
training_runs/mnist_4/: config.yaml
training_runs/mnist_5/: config.yaml
training_runs/mnist_6/: config.yaml
training_runs/stanford_dogs/: config.yaml
training_runs/stanford_dogs_1/: config.yaml
training_runs/stanford_dogs_2/: config.yaml
training_runs/stanford_dogs_3/: config.yaml
(+12 files in other folders)
